# internal/interfaces/http/dto/auth_dto.go
@@ -1,6 +1,0 @@
-package dto
-
-type LoginRequest struct {
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required,min=8"`
-}
